

                              KijiSchema Release Notes
Version 1.5.0
  * SCHEMA-775. Refactor KijiColumnNameTranslator/HBaseColumnName/LayoutCapsule

Version 1.4.3
  * SCHEMA-813. Split ZooKeeperFactory out of HBaseFactory, remove LocalLock,
      reference track Curator ZK connections

Version 1.4.2
  * SCHEMA-802. Log warning when uninstalling instances and deleting tables
      with registered users
  * SCHEMA-776. Enable bridge support for CDH 4.6

Version 1.4.1
  * SCHEMA-741. Integration tests now clean up dummy instances when using an
      external HBase.
  * SCHEMA-678. If HADOOP_HOME, HBASE_HOME, or JAVA_HOME are not set the kiji
      script will attempt to resolve those environment variables by
      utilizing the corresponding binary.

Version 1.4.0
  * SCHEMA-675. Adds support for configuration of Kiji column name translation.
  * SCHEMA-687. DebugResourceTracker no longer accepts null error messages.
  * SCHEMA-672. DecodedCell and KijiCell now support getting the reader Schema
      with which the cell was decoded (if any). Decoded cell adds a constructor
      which accepts a writer schema, reader schema, and value.
  * SCHEMA-648. Adds support for CDH5 and HBase 96 and updates platform bridge
      API to be compatible. Due to the remove of client-exposed row locks,
      deleteMapFamily will no longer hold a lock while deleting qualifiers.

Version 1.3.7
  * SCHEMA-663. KijiTablePool now properly sets the retain count when spawning
      tables to reach the minimum size.
  * SCHEMA-656. Resources which should be closed before JVM shutdown may now
      be registered with DebugResourceTracker, which will log errors for all
      unclosed resources when the JVM shuts down.
  * SCHEMA-651. cleanup deleted instances from zookeeper in
      /kiji-schema/instances.
  * SCHEMA-491. Share/reuse Zookeeper connections instances when possible.
  * SCHEMA-650. The KijiTableReaderPool now retains the KijiTable associated with