@@ -285,7 +285,14 @@
 
     <dependency>
       <groupId>org.apache.curator</groupId>
+      <artifactId>curator-framework</artifactId>
+      <version>${curator.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.curator</groupId>
       <artifactId>curator-test</artifactId>
+      <version>${curator.version}</version>
     </dependency>
 
     <!-- All platform bridge implementations that should be bundled with the redistributable. -->
