@@ -28,9 +28,12 @@ log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p %c: %m%n
 
 # Quiet down zookeeper, it's too noisy:
+log4j.logger.org.apache.curator=WARN
 log4j.logger.org.apache.zookeeper=WARN
 log4j.logger.org.apache.hadoop.hbase.zookeeper=WARN
-log4j.logger.org.apache.hadoop.hbase.client.HConnectionManager$HConnectionImplementation=ERROR
+log4j.logger.org.apache.hadoop.hbase.client=WARN
+log4j.logger.org.apache.hadoop.ipc.HBaseClient=WARN
+log4j.logger.org.apache.hadoop.ipc.RPCEngine=WARN
 
 # Kiji classes:
 log4j.logger.org.kiji.schema=INFO
