@@ -11,6 +11,7 @@ org.kiji.schema.tools.MetadataTool
 org.kiji.schema.tools.PutTool
 org.kiji.schema.tools.ScanTool
 org.kiji.schema.tools.SchemaTableTool
+org.kiji.schema.tools.ServicesTool
 org.kiji.schema.tools.SynthesizeUserDataTool
 org.kiji.schema.tools.SystemTableTool
 org.kiji.schema.tools.UninstallTool
