@@ -2,6 +2,7 @@
 
                               KijiSchema Release Notes
 Version 1.5.0
+  * SCHEMA-823. Add Kiji Services tool.
   * SCHEMA-775. Refactor KijiColumnNameTranslator/HBaseColumnName/LayoutCapsule
 
 Version 1.4.3
